# learn-blockchain-rostcoin

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  blockchain.py  routes.py
ico/: README.md  rostcoin_ico.sol
old/: blockchain.py
