[tool.poetry]
name = "blockchain-rostcoin"
version = "0.1.0"
description = ""
authors = ["Eduardo Rost <eduardo.a.rost@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
